refactor: unify article data structures and update API to use domain models
